<resources>
    <string name="app_name">Nerd 3.0</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="Iniciar">Iniciar</string>
    <string name="registrese">Registrese</string>
    <string name="repcontraseña">Repetir contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="Cerrar">Cerrar sesion</string>
    <string name="facebook_app_id">117185448956313</string>
    <string name="fb_login_protocol_scheme">fb117185448956313</string>
</resources>
